<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/images"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:src="@drawable/logoapp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/email_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/email_adresse"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="20dp"
            android:textSize="13sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_text"
                android:layout_weight="1"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_text"
                android:layout_weight="1"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/conform_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textSize="13sp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#C12A5D"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:background="@drawable/button_design"
            android:text="@string/register" />

        <TextView
            android:id="@+id/tv_areadyhavaaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/already_have_account_sing_in"
            android:textColor="#1228A1"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

</ScrollView>