<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/logoapp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:autofillHints=""
            android:hint="@string/enter_your_email"
            android:inputType="textPersonName"
            android:padding="20dp" />

        <TextView
            android:id="@+id/tv_Registernow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/reset_password2"
            android:textColor="#666568" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_resetpassword"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/button_design"
            android:backgroundTint="#C12A5D"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/resertpassword" />

    </LinearLayout>
</ScrollView>